--- a/lib/package.json
+++ b/lib/package.json
@@ -12,6 +12,7 @@
     "firebase": "^4.1.1",
     "jquery": "^3.2.1",
     "matchdep": "^1.0.1",
+    "materialize-clockpicker": "^1.0.1",
     "materialize-css": "^0.98.2"
   },
   "devDependencies": {
